<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/background_dark"
    android:keepScreenOn="true"
    tools:context=".TimerActivity">

    <TextView
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.75"
        android:textAlignment="center"
        android:text="21:56"
        android:textColor="@android:color/white"
        android:fontFamily="@font/applemint"
        android:gravity="center_horizontal" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/sets"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:layout_marginStart="20dp"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:fontFamily="@font/applemint"
                tools:text="@string/nullinfo"
                android:layout_marginLeft="20dp"
                android:gravity="center_horizontal" />
            <TextView
                android:id="@+id/textView7"
                android:layout_marginStart="20dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/sets"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="8sp"
                android:layout_marginLeft="20dp"
                android:gravity="center_horizontal" />
        </LinearLayout>


        <View
            android:id="@+id/view3"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/divider" />

        <TextView
            android:id="@+id/status"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/rest"
            android:fontFamily="@font/applemint"
            android:text="@string/work"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:gravity="center_horizontal" />
    </LinearLayout>
    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/repscounter_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/repscounter"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:fontFamily="@font/applemint"
                    android:text="0"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view2"
                    android:gravity="center_horizontal" />

                <TextView
                    android:id="@+id/text_time2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/applemint"
                    android:text="@string/reps"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="8sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/repscounter"
                    android:gravity="center_horizontal" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/totaltime_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <Chronometer
                    android:id="@+id/totaltime"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:fontFamily="@font/applemint"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:gravity="center_horizontal" />

                <TextView
                    android:id="@+id/text_time"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/applemint"
                    android:gravity="center_horizontal"
                    android:text="@string/time"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="8sp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/view4"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/divider" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/intervaltime"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:text="03:15"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:fontFamily="@font/applemint"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/text_currset"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/applemint"
                android:text="@string/currentset"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="8sp"
                android:gravity="center_horizontal" />
        </LinearLayout>

        <View
            android:id="@+id/view6"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/divider" />

    </LinearLayout>

    <View
        android:id="@+id/view8"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical">

        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="4dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/circle_button"
            android:fontFamily="@font/applemint"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/finishset"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/circle_button"
            android:text="@string/finishset"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:fontFamily="@font/applemint" />
    </LinearLayout>
</LinearLayout>