<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_marginTop="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/minus1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/remove" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sets"
                        android:textSize="5pt"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:gravity="center_horizontal" />
                    <TextView
                        android:id="@+id/sets_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="8"
                        android:textSize="7.5pt"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:gravity="center_horizontal" />
                </LinearLayout>
                <Button
                    android:id="@+id/plus1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/add" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/minus2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/remove" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/work"
                        android:textSize="5pt"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:gravity="center_horizontal" />
                    <TextView
                        android:id="@+id/work_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="00:30"
                        android:textSize="7.5pt"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:gravity="center_horizontal" />
                </LinearLayout>
                <Button
                    android:id="@+id/plus2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/add" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/minus3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/remove" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rest"
                        android:textSize="5pt"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:gravity="center_horizontal" />
                    <TextView
                        android:id="@+id/rest_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="00:30"
                        android:textSize="7.5pt"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:gravity="center_horizontal" />
                </LinearLayout>
                <Button
                    android:id="@+id/plus3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/add" />
            </LinearLayout>


        <Button
            android:id="@+id/create_new_start"
            android:layout_width="361dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/circle_button"
            android:text="@string/start"
            android:textSize="7.5pt" />

        <Button
            android:id="@+id/create_new_save"
            android:layout_width="359dp"
            android:layout_height="47dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/circle_button"
            android:text="@string/save"
            android:textSize="7.5pt" />
        </LinearLayout>
    </ScrollView>
